fix(TransactionHeader): Properly align the date selector on desktop

--- a/src/ducks/transactions/TransactionsPage.styl
+++ b/src/ducks/transactions/TransactionsPage.styl
@@ -27,3 +27,4 @@
 
 .TransactionsHeader__selectDatesContainer
     position relative
+    padding-bottom 12px
